Added mobile files

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "server/gps-track-server"]
 	path = server/gps-track-server
 	url = https://github.com/malancas-anamaria-niculina/gps-track-server.git
+[submodule "mobile/mobilegpstrack"]
+	path = mobile/mobilegpstrack
+	url = https://github.com/malancas-anamaria-niculina/mobilegpstrack
